--- a/Home.css
+++ b/Home.css
@@ -156,3 +156,14 @@ h1{
     justify-content: center;
     align-items: center;
 }
+.youtube{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.parallax-2{
+    background: url('004.jpg') repeat fixed 100%;
+    background-size: cover;
+    color: aliceblue;
+}
