--- a/Home.css
+++ b/Home.css
@@ -190,3 +190,26 @@ h1{
     background-size: cover;
     color: aliceblue;
 }
+footer{
+    width: 100%;
+    height: 300px;
+    background-color: #E7E3D8;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+}
+footer img{
+    height: 30px;
+}
+.footer_icon{
+    display: flex;
+    gap: 2rem;
+}
+footer p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #564332;
+}
