--- a/Home.css
+++ b/Home.css
@@ -241,6 +241,7 @@ form{
   display: grid;
   width: 525px;
   height: 570px;
+  flex-direction: column;
 }
 .container4 p{
     font-family: Bell MT Regular;
@@ -255,3 +256,30 @@ button{
     display: flex;
     justify-content: center;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .form-row {
+    display: flex;
+    gap: 15px;
+  }
+
+  input, textarea {
+    width: 100%;
+    padding: 5px 0;
+    border: none;
+    border-bottom: 1px solid #000;
+    font-size: 14px;
+    background: none;
+    outline: none;
+  }
+
+  textarea {
+    resize: none;
+    height: 80px;
+  }
+
