--- a/Home.css
+++ b/Home.css
@@ -12,6 +12,7 @@
 body{
     margin: 0;
 }
+/* mavbar */
 nav{
     justify-content: center;
     align-items: center;
@@ -54,6 +55,8 @@ img{
     display: flex;
     justify-content: center;
 }
+
+/* slider */
 .swiper {
 width: 100%;
 height: 100%;
@@ -86,6 +89,8 @@ color: white;
 .swiper-button-next:hover{
 color: grey;
 }
+
+/* contant */
 p{
     font-family: calibri;
   font-weight: 200;
@@ -100,6 +105,8 @@ p{
     display: flex;
     justify-content: center;
 }
+
+/* about ankit */
 .container2{
     width: 100%;
     height: 500px;
@@ -128,6 +135,8 @@ p{
     font-family: Atteron personal use;
     font-size: x-large;
 }
+
+/* what we do */
 h1{
     display: flex;
     justify-content: center;
@@ -155,6 +164,8 @@ h1{
     font-size:large;
     width: 300px;
 }
+
+/* flims */
 .parallax-1{
     background: url('005.jpg') repeat fixed 100%;
     background-size: cover;
@@ -187,6 +198,8 @@ h1{
     align-items: center;
     gap: 1rem;
 }
+
+/* stories */
 .parallax-2{
     background: url('_49A2275.jpg') repeat fixed 100%;
     background-size: cover;
@@ -213,6 +226,7 @@ h1{
     width: 300px;
 }
 
+/* footer */
 footer{
     width: 100%;
     height: 300px;
@@ -242,6 +256,8 @@ footer p{
     align-items: center;
     color: #564332;
 }
+
+/* get in touch */
 .container4{
     width: 100%;
     display: flex;
