--- a/aboutus.css
+++ b/aboutus.css
@@ -49,10 +49,10 @@ justify-content: center;
 .hero{
     height: 100vh;
     width: 100%;
-background-image: url(001.jpg);
+background-image: url(SRD_8092\ copy.jpg);
 background-size: cover;
 background-position: center;
-background-attachment: fixed;
+/* background-attachment: fixed; */
 }
 
 
