--- a/contact.css
+++ b/contact.css
@@ -161,7 +161,7 @@ justify-content: center;
 form{
 position: relative;
 display: grid;
-width: 525px;
+width: 400px;
 height: 570px;
 flex-direction: column;
 }
@@ -191,13 +191,13 @@ gap: 15px;
 }
 label{
 font-family: Bell MT Regular;
-
+width: 500px;
 }
 input, textarea {
 width: 100%;
 padding: 5px 0;
 border: none;
-border-bottom: 1px solid #000;
+border-bottom: 2px solid #000;
 font-size: 14px;
 background: none;
 outline: none;
@@ -206,6 +206,10 @@ outline: none;
 textarea {
 resize: none;
 height: 80px;
+}
+select{
+    border: none;
+    border-bottom: 2px solid black;
 }
 
 /* map */
@@ -246,6 +250,7 @@ height: 80px;
     display: flex;
     gap: 1rem;
     justify-content: center;
+    padding: 50px;
 }
 .QA1{
     width: 2597px;
