--- a/aboutus.css
+++ b/aboutus.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Roboto:wght@100;400&display=swap');
+@font-face{
+    font-family: Candara Regular;
+    src: url(Candara.ttf);
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -40,7 +46,7 @@ img{
 height: 100px;
 color: white;
 }
-.container{
+.container1{
 width: 100%;
 display: flex;
 justify-content: center;
@@ -54,6 +60,71 @@ background-size: cover;
 background-position: center;
 /* background-attachment: fixed; */
 }
+
+section {
+  /* min-height: 100vh; */
+  width: 100%;
+   display: flex;
+  align-items: center;
+  /* justify-content: center; */
+}
+.container {
+    height: 860px;
+    width: 90%;
+    max-width: 805px;
+    margin: 66px;
+    display: flex;
+    align-items: center;
+    padding-left: 100px;
+}
+.left {
+  width: 600px;
+  height: 800px;
+  background: url(ankit_h.jpg)
+    no-repeat center / cover;
+}
+.right {
+    background: url(ankit_w.jpg) no-repeat center/ cover;
+    width: 600px;
+    min-height: 350px;
+  background-color: #303137;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  color: white;
+  margin-left: -270px;
+  margin-top: -740px;
+}
+.right h1 {
+  font-size: 40px;
+  font-weight: lighter;
+}
+.right p {
+  margin: 20px 0;
+  font-weight: 500;
+  line-height: 25px;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 20px;
+  }
+  .left {
+    width: 100%;
+    height: 400px;
+  }
+  .right {
+    width: 90%;
+    margin: 0;
+    margin-top: -100px;
+  }
+}
+
+
 
 
 
