--- a/Home.css
+++ b/Home.css
@@ -76,6 +76,8 @@ display: block;
 width: 100%;
 height: 780px;
 object-fit: cover;
+background-attachment: fixed;
+
 }
 .swiper-button-prev{
 color: white;
@@ -205,7 +207,7 @@ h1{
     justify-content: center;
     gap: 3rem;
     height: 300px;
-    animation: marquee 30s linear infinite;
+    animation: marquee 50s linear infinite;
   }
   .marquee-container:hover .marquee-track {
     animation-play-state: paused;
