--- a/contact.css
+++ b/contact.css
@@ -1,14 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Roboto:wght@100;400&display=swap');
 @font-face{
+    font-family: Atteron personal use;
+    src: url(Atteron\ Personal\ Use\ Only.ttf);
+    font-family: Bell MT Regular;
+    src: url(Bell\ MT\ Regular.otf);
+    font-family: Candara;
+    src: url(Candara_Bold.ttf);
     font-family: Candara Regular;
     src: url(Candara.ttf);
+    font-family: Calibri;
+    src: url(calibril.ttf);
 }
-
 body{
     margin: 0;
     padding: 0;
 }
-/* Navbar */
+/* navbar */
 nav{
 justify-content: center;
 align-items: center;
@@ -28,16 +35,15 @@ font-family: calibri;
 font-weight: 200;
 }
 
-
 .links>a{
 text-decoration: none;
-color: black;
+color: white;
 }     
 .links>a:hover{
 color: rgb(223, 168, 52);
 }
 .links{
-color: black;
+color:white;
 }
 .links:hover{
 color: rgb(223, 168, 52);
@@ -46,131 +52,244 @@ img{
 height: 100px;
 color: white;
 }
-.container1{
+.container{
 width: 100%;
 display: flex;
 justify-content: center;
 
 }
 .hero{
-    height: 100vh;
+    height: 685px;
     width: 100%;
-background-image: url(ankit/SRD_8092\ copy.jpg);
+background-image: url(contact/AA.jpg);
 background-size: cover;
-background-position: center;
-/* background-attachment: fixed; */
+/* background-position: center; */
+ background-attachment: fixed; 
 }
 
-section {
-  /* min-height: 100vh; */
-  width: 100%;
-   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.container {
-    height: 860px;
-    width: 90%;
-    max-width: 805px;
-    margin: 66px;
-    display: flex;
-    align-items: center;
-    padding-left: 100px;
-}
-.left {
-  width: 600px;
-  height: 800px;
-  background: url(ankit/ankit_h.jpg)
-    no-repeat center / cover;
-}
-.right {
-    background: url(ankit/ankit_w.jpg) no-repeat center/ cover;
-    width: 600px;
-    min-height: 350px;
-  background-color: #303137;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 30px;
-  color: white;
-  margin-left: -270px;
-  margin-top: -740px;
-}
-.right h1 {
-  font-size: 40px;
-  font-weight: lighter;
-}
-.right p {
-  margin: 20px 0;
-  font-weight: 500;
-  line-height: 25px;
-}
-
-
-@media only screen and (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    width: 100%;
-    margin: 0 20px;
-  }
-  .left {
-    width: 100%;
-    height: 400px;
-  }
-  .right {
-    width: 90%;
-    margin: 0;
-    margin-top: -100px;
-  }
-}
-
-.container2{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 9rem;
-}
+/* content */
 .text{
-  width: 828px;
-  font-family: candara Regular; 
-  font-size: 30px;
-
-}
-.image{
-  width: 500px;
-  height: 700px;
-}
-
-
-
-/* Footer */
-footer{
-    width: 100%;
-    height: 300px;
-    background-color: #E7E3D8;
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    justify-content: center;
     flex-direction: column;
-    justify-content: center;
-    }
-    footer img{
-    height: 30px;
-    }
-    .footer_icon{
-    display: flex;
+    text-align: center;
+    color: white;
+    /* text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3); */
+
+}
+.text b{
+    font-family: Candara;
+    font-size: 50px;
+}
+.text p{
+    font-family: Candara Regular;
+    font-size: larger;
+}
+.contact{
     gap: 2rem;
+    display: flex;
+    justify-content: center;
+}
+.text1 .contact{
+    gap: 1rem;
+    display: flex;
+    justify-content: center;
+    
+}
+.text1{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+span{
+    font-family: Candara Regular;
+    font-size: 30px;
+    color: #564332;
+}
+.text1 p{
+    font-family: Calibri;
+    width: 45%;
+    color: #564332;
+}
+/* fade image */
+.slider{
+    height: 450px;
+    width: 300px;
+    animation: slide 15s infinite;
+    background-image: url(contact/001GIT.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    border-radius: 8px;
+}
+@keyframes slide{
+    20%{
+        background: url(contact/001GIT.jpg);
     }
-    .icon{
-    transition: all 0.3s linear;
+    40%{
+        background: url(contact/002GIT.jpg);
     }
-    .icon:hover{
-    transform: scale(1.5);
+    60%{
+        background: url(contact/003GIT.jpg);
     }
-    footer p{
+    80%{
+        background: url(contact/004GIT.jpg);
+    }
+    100%{
+        background: url(contact/005GIT.jpg);
+    }            
+}     
+  /*contact form  */
+.container4{
+    height: 700px;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 5rem;
+background-color: #E7E3D8;
+}
+.container4 img{
+height: 450px;
+width: 300px;
+}
+h1{
+font-family: Atteron personal use;
+font-weight: 100;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+form{
+position: relative;
+display: grid;
+width: 400px;
+height: 570px;
+flex-direction: column;
+}
+.container4 p{
+font-family: Bell MT Regular;
+}
+button{
+font-family: Bell MT Regular;
+/* background: white; */
+height: 35px;
+width: 115px;
+}
+.button{
+display: flex;
+justify-content: center;
+}
+
+form {
+display: flex;
+flex-direction: column;
+gap: 15px;
+}
+
+.form-row {
+display: flex;
+gap: 15px;
+
+}
+label{
+font-family: Bell MT Regular;
+width: 500px;
+background-color: transparent;
+}
+input, textarea {
+width: 100%;
+padding: 5px 0;
+border: none;
+border-bottom: 2px solid #000;
+font-size: 14px;
+background: none;
+outline: none;
+}
+
+textarea {
+resize: none;
+height: 80px;
+}
+select{
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: transparent;
+}
+
+/* map */
+.map{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+.map p{
+    font-family: Candara Regular;
     color: #564332;
-    text-align: center;
-    }
+    font-size: larger;
+}
+.no{
+    font-family: Candara Regular;
+    color: #564332;
+    display: flex;
+    gap: 15rem;
+    justify-content: center;
+    padding-left: 107px;
+}
+
+/* question */
+.question{
+    font-family: Bell MT Regular;
+    font-size: xx-large;
+    color: #564332;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    font-weight: 600;
+    align-items: center;
+}
+.QA{
+    font-family:Candara Regular;
+    color: #564332;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    padding: 50px;
+}
+.QA1{
+    width: 2597px;
+}
+
+/* footer */
+footer{
+width: 100%;
+height: 300px;
+background-color: #E7E3D8;
+display: flex;
+align-items: center;
+flex-wrap: wrap;
+flex-direction: column;
+justify-content: center;
+}
+footer img{
+height: 30px;
+}
+.footer_icon{
+display: flex;
+gap: 2rem;
+}
+.icon{
+transition: all 0.3s linear;
+}
+.icon:hover{
+transform: scale(1.5);
+}
+footer p{
+display: flex;
+justify-content: center;
+align-items: center;
+color: #564332;
+text-align: center;
+}
