--- a/contact.css
+++ b/contact.css
@@ -217,6 +217,9 @@ select{
     border-bottom: 2px solid black;
     background-color: transparent;
 }
+option{
+    height: 100px;
+}
 
 /* map */
 .map{
