--- a/stories.css
+++ b/stories.css
@@ -44,7 +44,7 @@ nav{
     .hero{
         height: 100vh;
         width: 100%;
-    background-image: url(slider_images/008.jpg);
+    background-image: url(stories/549A2100\ copy.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -96,17 +96,18 @@ a:hover{
 .container2{
     height: 500px;
     width: 100%;
-background-image: url(slider_images/001.jpg);
+background-image: url(_49A3611\ copy.jpg);
 background-size: cover;
 background-position: center;
 }
 .EQ{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     width: 100%;
     height: 500px;
     flex-direction: column;
+    padding-top: 10px;
 }
 .EQ i{
     font-family: calibri;
@@ -122,9 +123,6 @@ a{
     color: black;
     text-decoration: none;
 }
-
-
-
 
 /* footer */
 footer{
