--- a/aboutus.css
+++ b/aboutus.css
@@ -61,84 +61,86 @@ background-position: center;
 /* background-attachment: fixed; */
 }
 
-section {
-  /* min-height: 100vh; */
+
+.container3{
   width: 100%;
-   display: flex;
-  align-items: center;
+  display: flex;
+  position: relative;
   justify-content: center;
 }
 .container {
-    height: 860px;
-    width: 90%;
-    max-width: 805px;
-    margin: 66px;
+    width: 50%;
     display: flex;
     align-items: center;
-    padding-left: 100px;
+    gap: 5rem;    
+}
+center{
+  position: absolute;
+  width: 62%;
+  top: 130px;
+  left: 150px;
+
 }
 .left {
-  width: 600px;
-  height: 800px;
-  background: url(ankit/ankit_h.jpg)
-    no-repeat center / cover;
+  position: relative;
+  width: 400px;
+  height: 600px;
+  background: url(ankit/ankit_h.jpg) no-repeat center / cover;
 }
 .right {
-    background: url(ankit/ankit_w.jpg) no-repeat center/ cover;
-    width: 600px;
-    min-height: 350px;
+  position: relative;
+  background: url(ankit/ankit_w.jpg) no-repeat center / cover;
+  width: 355px;
+  height: 200px;
   background-color: #303137;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 30px;
   color: white;
-  margin-left: -270px;
-  margin-top: -740px;
-}
-.right h1 {
-  font-size: 40px;
-  font-weight: lighter;
-}
-.right p {
-  margin: 20px 0;
-  font-weight: 500;
-  line-height: 25px;
+  margin-left: -160px;
+  margin-top: -550px;
 }
 
+.style{
+  width: 500px;
+  position: relative;
+  bottom: -109px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: -227px;
 
-@media only screen and (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    width: 100%;
-    margin: 0 20px;
-  }
-  .left {
-    width: 100%;
-    height: 400px;
-  }
-  .right {
-    width: 90%;
-    margin: 0;
-    margin-top: -100px;
-  }
+}
+.style p{
+  bottom: 30px;
+  font-size: larger;
+  width: 566px;
+}
+.style h1{
+  font-family: candara Regular;
+  display: flex;
+  justify-content: end;
+  width: 100%;
 }
 
 .container2{
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 9rem;
 }
 .text{
-  width: 828px;
-  font-family: candara Regular; 
-  font-size: 30px;
+  width: 31%;
+  font-family: candara Regular;
+  font-size: larger;
+  padding-right: 20px;
 
 }
 .image{
-  width: 500px;
-  height: 700px;
+  width: 400px;
+  height: 500px;
 }
 
 
